# cyberchef-tauri

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  cyberchef-upstream-build.yml  release.yml
docs/: UPDATING.md  WRAPPER_CUSTOMIZATIONS.md
scripts/: build-cyberchef.mjs  check-cyberchef-update.mjs  dev-cyberchef.mjs  doctor.mjs  homebrew-cask.mjs  lib.mjs  prepare-cyberchef.mjs  release-check.mjs  release-cut.mjs  release-homebrew-published.mjs  release-info.mjs  release-metadata.mjs  sync-icons.mjs  tauri-cli.mjs  vendor-cyberchef.mjs  vendor-subtree.mjs  vendor-update.mjs  wrapper-check.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
wrapper-assets/: settings.html  tauri-desktop.js  tauri-font-override.css
