[package]
name = "cyberchef_wrapper"
version = "0.1.0"
description = "Tauri wrapper for CyberChef"
authors = ["Sumit Murari"]
license = "Apache-2.0"
default-run = "cyberchef_wrapper"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6.8", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

